[package]
name = "merkle-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bench]]
name = "benchmerkle"
harness = false


[dependencies]
solana-merkle-tree = "1.16.5"
solana-sdk = "1.16.5"
rand = "0.8.5"

[dev-dependencies]
glassbench = "0.3.5"
